--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "function-bind": "1.1.0",
     "html-webpack-plugin": "2.28.0",
     "http-proxy-middleware": "0.17.4",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.0",
     "opn": "4.0.2",
     "optimize-css-assets-webpack-plugin": "1.3.0",
