--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "js-cookie": "2.1.4",
     "jsonlint": "1.6.2",
     "mockjs": "1.0.1-beta3",
+    "moment": "^2.18.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "screenfull": "3.2.2",
